Add JVM parameter info