@@ -8,6 +8,8 @@ Pata tries to solve this by adding a server component to the running database pr
 
 ## Usage
 
+### Dependecies
+
 Include the pata-x.y.z.jar into the database process. It has following dependencies (from build.gradle), that must be available:
 >    api 'org.apache.arrow:arrow-vector:10.0.1'  
 >    api 'org.apache.arrow:arrow-memory-core:10.0.1'  
@@ -15,13 +17,23 @@ Include the pata-x.y.z.jar into the database process. It has following dependenc
 >    api 'com.fasterxml.jackson.core:jackson-core:2.14.1'  
 >    api 'org.duckdb:duckdb_jdbc:0.7.1'  
 
+### JVM Parameter
+
+Apache Arrow needs following JVM parameter (see https://arrow.apache.org/docs/java/install.html#java-compatibility):
+
+```
+--add-opens=java.base/java.nio=ALL-UNNAMED
+```
+
+### Starting the server
+
 The database process has to start the server (typically in a separate Thread) like this:
 ```java
 			Server s = new Server((DuckDBConnection) con, 41442);		
 			s.startServer();
 ```
 
-The client needs the same dependencies. 
+The client needs the same dependencies.
 *It can only connect **locally**. There is no user management/security/encryption. Take this into account before starting up a server.*
 
 ## DBeaver usage
